# nodestream-plugin-pedantic

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
nodestream_plugin_pedantic/: audits.py
tests/: test_audits.py
